# dow

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs
src/models/: spotify.rs
src/service/: commands.rs  downloader.rs  formatter.rs  libs.rs  mod.rs  progress.rs  scrap.rs  spotify.rs  utils.rs  youtube.rs
