[package]
name = "dow"
version = "0.1.2"
edition = "2024"

[lib]
name = "dow"
path = "src/lib.rs"

[[bin]]
name = "dow"
path = "src/main.rs"

[dependencies]
reqwest = {version="0.13.2",features=["json"]}
scraper = "0.25.0"
serde_json = "1.0.149"
serde = {version="1.0.228",features=["derive"]}
tokio = {version="1.49.0",features=["macros","rt-multi-thread","signal","process"]}
futures = "0.3.32"
clap = {version="4.5.60",features=["derive"]}
indicatif = "0.18.4"
zip = "8.1.0"

[profile.release]
opt-level = 3       
lto = true           
codegen-units = 1    
strip = true         
